# PistacheML_API

./: .gitignore  README.md  main.py  pyproject.toml
log_writer/: logger.py
models/: ag_model.pkl  model_config.yaml  pistache_model.py  train_MLmodel.ipynb  train_MLmodel.py
models/files/: ag_model_action_2026-03-28.json  model_config.yaml
routers/: ag_model_pistache.py
services/: manage_model_config_params.py  predict_ag_model.py
